# coinflip-bet

./: .gitignore  Anchor.toml  README.md  cspell.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
anchor/: Anchor.toml
anchor/programs/coinflipbet/: Cargo.toml
anchor/src/: coinflipbet-exports.ts  index.ts
anchor/tests/: coinflipbet.spec.ts
coinflip-fe/: .env  package-lock.json  package.json
coinflip-fe/src/: App.css  App.tsx  Wallet.tsx
coinflip-fe/src/const/: index.ts
coinflip-fe/src/instructions/: getRoll.ts  index.ts  runBet.ts
coinflip-fe/src/interfaces/: PhantonProvider.ts
init-script/: package.json  tsconfig.json
init-script/src/: close.ts  decr.ts  index.ts  init.ts
manager-cli/: .env  package-lock.json  package.json
manager-cli/src/: init-system-account.ts  init-system-wager.ts  main.ts  topup.ts
programs/coinflip-bet/: Cargo.toml  README.md
programs/coinflip-bet/src/: account_validators.rs  lib.rs
scripts/: bet.ts  close.ts  flip.ts  init.ts  keys.json  package-lock.json  topup.ts  wager.ts
src/: index.css  main.tsx
src/app/: app-routes.tsx
src/components/account/: account-balance-check.tsx  account-balance.tsx  account-checker.tsx  account-data-access.tsx  account-detail-feature.tsx  account-list-feature.tsx  account-ui.tsx  (+1 more)
src/constants/: atoms.tsx  default-clusters.tsx  routes.tsx  wallet-button.tsx
src/functions/: get-cluster-url-param.tsx
src/models/: cluster-provider-context.tsx  cluster.tsx
tests/: coinflip-bet.ts
(+27 files in other folders)
